# desktop-agent

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_en.md  build.ps1
resources/: resources.qrc
resources/styles/: style.qss
resources/translations/: desktop_agent_zh_CN.qm  desktop_agent_zh_CN.ts
src/: CMakeLists.txt
src/app/: Application.cpp  Application.h
src/core/: ConversationBuffer.cpp  ConversationBuffer.h  ConversationManager.cpp  ConversationManager.h  Message.cpp  Message.h  Session.cpp  Session.h  SessionStore.cpp  SessionStore.h  TokenEstimator.cpp  TokenEstimator.h
src/network/: NetworkWorker.cpp  NetworkWorker.h  OllamaClient.cpp  OllamaClient.h  StreamParser.cpp  StreamParser.h
src/ui/: ChatWidget.cpp  ChatWidget.h  CodeHighlighter.cpp  CodeHighlighter.h  InputWidget.cpp  InputWidget.h  MainWindow.cpp  MainWindow.h  MessageBubble.cpp  MessageBubble.h  MessageListWidget.cpp  MessageListWidget.h  SessionListWidget.cpp  SessionListWidget.h  SettingsDialog.cpp  SettingsDialog.h  StreamingTextBrowser.cpp  StreamingTextBrowser.h
src/utils/: AppSettings.cpp  AppSettings.h  JsonHelper.cpp  JsonHelper.h
tests/: CMakeLists.txt  TestConversationBuffer.cpp  TestSessionStore.cpp  TestStreamParser.cpp  TestTokenEstimator.cpp
